--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-window": "^1.8.11",
     "styled-components": "^6.1.16"
   },
   "devDependencies": {
